Bug 74468 - impress: advance slide automatically has no effect
Summary: impress: advance slide automatically has no effect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:4.3.0 target:4.2.2
Keywords: regression
: 75795 76826 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-03 18:51 UTC by cm20
Modified: 2014-05-01 11:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cm20 2014-02-03 18:51:35 UTC
Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Comment 1 cm20 2014-02-03 18:53:54 UTC
setting time for advance slide has no effect.
thanks
Comment 2 sophie 2014-02-04 16:56:27 UTC
So you didn't give much details, but here is what I found:
- create a slide deck with two slides
- go to Slideshow > Rehearse timing
==> no time is displayed in the field
Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71 Ubuntu 13.10 x64

Same test works well with Version: 4.3.0.0.alpha0+
Build ID: 5c39b6b997ddc85e6848efc230a427a124b97264
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-02-03_01:49:33

Set to new - Sophie
Comment 3 cm20 2014-02-06 06:42:38 UTC
@sophie (and all): sorry for my brevity.

behavior:
- add some slice
-> slide transition > advance slide
- automatically after 10sec
- apply to all slide
- run präsentation
->>> slide advance is very fast (less then 1sec)


expected behavior:
- add some slice
-> slide transition > advance slide
- automatically after 10sec
- apply to all slide
- run präsentation
- slide 1 is showed; after 10sec slide 2; after 10sec slide 3; ...


!! the expected behavior is working on OOO AOO400m3(Build:9702)  -  Rev. 1503704
2013-07-16 14:49:37 (Tue, 16 Jul 2013) - Linux x86_64

thanks
Comment 4 sophie 2014-02-06 09:26:58 UTC
Thank you for your information. I can confirm that adding a time to transitions is not applied. Also the default timing display 100sec which seems strange.
Was working well in 4.1.4.2 so it's a regression.
I'm opening a new bug for the Rehearse timing issue. 
Sophie
Comment 5 Commit Notification 2014-02-13 13:21:05 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=78ff9d90f2a74792c437087ede11559c111c5c98

fdo#74468 fix timing of slide transitions



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-02-13 13:43:13 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d7aa985411aede915df00881b36cf5914a1cfd22&h=libreoffice-4-2

fdo#74468 fix timing of slide transitions


It will be available in LibreOffice 4.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 David Tardon 2014-03-05 12:43:04 UTC
*** Bug 75795 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-03-21 17:01:10 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b1cca8c547ce53b2af29b3edecc22c7694a0621

Related: fdo#74468 drop hard-coded 'sec' and use FUNIT_SECONDS



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 David Tardon 2014-04-08 07:52:44 UTC
*** Bug 76826 has been marked as a duplicate of this bug. ***