fdo#74468 fix timing of slide transitions

Regression since commit 16428c9600964a4945cf6fd0d938dea047d1248b.

Change-Id: Id274c21e08d10d2e727f3b5a3fd852cd297e4637