vcl/source/control/field.cxx
@@ -1596,6 +1596,8 @@ bool MetricField::set_property(const OString &rKey, const OString &rValue)
     }
     else if (rKey == "digits")
         SetDecimalDigits(rValue.toInt32());
+    else if (rKey == "spin-size")
+        SetSpinSize(rValue.toInt32());
     else
         return SpinField::set_property(rKey, rValue);
     return true;
